mouse movement for main menu

--- a/Unreal Files/Config/DefaultGame.ini
+++ b/Unreal Files/Config/DefaultGame.ini
@@ -1,3 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=BB1A7D8A4032F3C6BDFA9A88D8F7142F
 ProjectName=Third Person BP Game Template
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+
