removed plugin + assets

--- a/Unreal Files/Code_AI_Main.uproject
+++ b/Unreal Files/Code_AI_Main.uproject
@@ -13,7 +13,7 @@
 	"Plugins": [
 		{
 			"Name": "EasyMultiSave",
-			"Enabled": true,
+			"Enabled": false,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/7232621c23174bbbbb64c7bfb6583f6f"
 		}
 	]
