--- a/Unreal Files/Config/DefaultInput.ini
+++ b/Unreal Files/Config/DefaultInput.ini
@@ -130,6 +130,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Run",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +ActionMappings=(ActionName="Run",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftThumbstick)
 +ActionMappings=(ActionName="ItemPickup",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
++ActionMappings=(ActionName="Flashlight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=G)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
