--- a/Unreal Files/Config/DefaultInput.ini
+++ b/Unreal Files/Config/DefaultInput.ini
@@ -131,6 +131,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Run",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftThumbstick)
 +ActionMappings=(ActionName="ItemPickup",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +ActionMappings=(ActionName="Flashlight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=G)
++ActionMappings=(ActionName="KeyTesting",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=H)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
