update to build data

--- a/Unreal Files/Config/DefaultEngine.ini
+++ b/Unreal Files/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=Code_AI_Main
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/Tutorial_Level.Tutorial_Level
-GameDefaultMap=/Game/Levels/Tutorial_Level.Tutorial_Level
+EditorStartupMap=/Game/Levels/subLevels/Fancy_Tutorial.Fancy_Tutorial
+GameDefaultMap=/Game/Levels/subLevels/Tutorial_Level.Tutorial_Level
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
