A.I. Tick damage, Camera System, and A.I. imporvements

--- a/Unreal Files/Config/DefaultEngine.ini
+++ b/Unreal Files/Config/DefaultEngine.ini
@@ -50,3 +50,11 @@ DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOu
 MinDeltaVelocityForHitEvents=0.000000
 ChaosSettings=(DefaultThreadingModel=TaskGraph,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
 
+[/Script/NavigationSystem.RecastNavMesh]
+AgentRadius=39.567989
+AgentHeight=182.505798
+AgentMaxSlope=55.866665
+AgentMaxStepHeight=38.846355
+MinRegionArea=0.000000
+TileSizeUU=1089.053223
+
