Scrapped music but A.I. is fixed

--- a/Unreal Files/Config/DefaultEngine.ini
+++ b/Unreal Files/Config/DefaultEngine.ini
@@ -51,10 +51,13 @@ MinDeltaVelocityForHitEvents=0.000000
 ChaosSettings=(DefaultThreadingModel=TaskGraph,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
 
 [/Script/NavigationSystem.RecastNavMesh]
-AgentRadius=39.567989
+AgentRadius=32.056259
 AgentHeight=182.505798
-AgentMaxSlope=55.866665
-AgentMaxStepHeight=38.846355
+AgentMaxSlope=64.342850
+AgentMaxStepHeight=46.950714
 MinRegionArea=0.000000
-TileSizeUU=1089.053223
+TileSizeUU=7814.201660
+MaxSimplificationError=0.000000
+CellHeight=1.000000
+CellSize=1.000000
 
