--- a/Unreal Files/Config/DefaultGame.ini
+++ b/Unreal Files/Config/DefaultGame.ini
@@ -1,6 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=BB1A7D8A4032F3C6BDFA9A88D8F7142F
-ProjectName=Third Person BP Game Template
+ProjectName=CODE: AI
+Description=A 3D First-Person Horror Game that places the character against a rogue A.I. system.
+CompanyName=PVAMU
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "63BC52AF48215B683463BC85F2771721", "A.I.")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_Shipping
